--- a/office/src/main/resources/i18n/name_zh_CN.properties
+++ b/office/src/main/resources/i18n/name_zh_CN.properties
@@ -2,5 +2,6 @@
 glad.office.Login	=	Login Login Login
 glad.office.Top		=	Top Top Top
 glad.office.Tables	=	Tables Tables Tables
+glad.office.Forms	=	Forms Forms Forms
 
 #screen id
