--- a/office/src/main/resources/i18n/name_zh_CN.properties
+++ b/office/src/main/resources/i18n/name_zh_CN.properties
@@ -1,7 +1,7 @@
 #title 
-glad.office.Login	=	Login Login Login
-glad.office.Top		=	Top Top Top
-glad.office.Tables	=	Tables Tables Tables
-glad.office.Forms	=	Forms Forms Forms
-
+glad.office.Login		=	Login Login Login
+glad.office.Top			=	Top Top Top
+glad.office.Tables		=	Tables Tables Tables
+glad.office.Forms		=	Forms Forms Forms
+glad.office.validate	=	validate validate validate
 #screen id
