--- a/office/src/main/resources/i18n/message_zh_CN.properties
+++ b/office/src/main/resources/i18n/message_zh_CN.properties
@@ -1,10 +1,4 @@
-#resource/msg1_zh_CN.properties  
-message1=message1 changed value[\u4E2D\u6587]!
+#resource/message_zh_CN.properties  
 
-E00001	=	This is a Error Message !QAQ!
-OFE0001MW	=	
-OFE0001ME	=	
-OFE0001LW	=
-OFE0001LE	=
-
-testcode	=	errorMsg
+top.details				=	\u8BE6\u7EC6\u4FE1\u606F
+top.vetoinformation		=	\u5426\u51B3\u4FE1\u606F
