--- a/office/src/main/resources/i18n/Name_zh_CN.properties
+++ b/office/src/main/resources/i18n/Name_zh_CN.properties
@@ -5,3 +5,4 @@ glad.office.Tables		=	Tables Tables Tables
 glad.office.Forms		=	Forms Forms Forms
 glad.office.validate	=	validate validate validate
 #screen id
+glad.office.workhours	=	workhours
