--- a/office/src/main/resources/i18n/Name_zh_CN.properties
+++ b/office/src/main/resources/i18n/Name_zh_CN.properties
@@ -5,4 +5,4 @@ glad.office.Tables		=	Tables Tables Tables
 glad.office.Forms		=	Forms Forms Forms
 glad.office.validate	=	validate validate validate
 #screen id
-glad.office.workhours	=	workhours
+glad.office.workhours	=	\u5DE5\u65F6\u767B\u8BB0
