top changge to dashboard

--- a/office/src/main/resources/i18n/Name_zh_CN.properties
+++ b/office/src/main/resources/i18n/Name_zh_CN.properties
@@ -1,6 +1,6 @@
 #title 
 glad.office.Login		=	Login Login Login
-glad.office.Top			=	Top Top Top
+glad.office.Dashboard	=	Dashboard
 glad.office.Tables		=	Tables Tables Tables
 glad.office.Forms		=	Forms Forms Forms
 glad.office.validate	=	validate validate validate
