--- a/office/src/main/resources/i18n/Message_zh_CN.properties
+++ b/office/src/main/resources/i18n/Message_zh_CN.properties
@@ -1,7 +1,7 @@
 #resource/message_zh_CN.properties  
 
-top.details				=	\u8BE6\u7EC6\u4FE1\u606F
-top.vetoinformation		=	\u5426\u51B3\u4FE1\u606F
+dashboard.details				=	\u8BE6\u7EC6\u4FE1\u606F
+dashboard.vetoinformation		=	\u5426\u51B3\u4FE1\u606F
 
 com.glad.annotation.Date		=	com.glad.annotation.Date\u2018
 com.glad.annotation.Time		=	com.glad.annotation.Date\u2018
