--- a/office/src/main/resources/i18n/Name_zh_CN.properties
+++ b/office/src/main/resources/i18n/Name_zh_CN.properties
@@ -6,3 +6,5 @@ glad.office.Forms		=	Forms Forms Forms
 glad.office.validate	=	validate validate validate
 #screen id
 glad.office.workhours	=	\u5DE5\u65F6\u767B\u8BB0
+glad.office.models		=	\u6A21\u5757\u67E5\u8BE2
+						=   \u6CA1\u627E\u5230\u6807\u9898
