--- a/office/src/main/java/com/glad/ErrorResources_zh_CN.properties
+++ b/office/src/main/java/com/glad/ErrorResources_zh_CN.properties
@@ -1,4 +1,4 @@
-OFE0001MW	=	{0} \u9019\u662F\u4E00\u500B\u4E2D\u6587 !QAQ! {1}
+OFE0001MW	=	{0} \u9019\u662F\u4E00\u500B\u4E2D\u6587 {1}
 OFE0002MW	=	
 OFE0003ME	=	
 OFE0004LW	=
