--- a/office/src/main/resources/i18n/Name_zh_CN.properties
+++ b/office/src/main/resources/i18n/Name_zh_CN.properties
@@ -1,10 +1,14 @@
 #title 
-glad.office.Login		=	Login Login Login
-glad.office.Dashboard	=	Dashboard
-glad.office.Tables		=	Tables Tables Tables
-glad.office.Forms		=	Forms Forms Forms
-glad.office.validate	=	validate validate validate
+glad.office.Login			=	\u7528\u6237\u767B\u5F55
+glad.office.Dashboard		=	\u5B8F\u667A\u79D1\u6280\u7535\u5B50\u529E\u516C\u7CFB\u7EDF
+glad.office.Forms			=	Forms Forms Forms
+glad.office.validate		=	validate validate validate
+glad.office.models = QAQ
 #screen id
-glad.office.workhours	=	\u5DE5\u65F6\u767B\u8BB0
-glad.office.models		=	\u6A21\u5757\u67E5\u8BE2
-						=   \u6CA1\u627E\u5230\u6807\u9898
+glad.office.workhours			=	\u5DE5\u65F6\u7BA1\u7406
+glad.office.workhours.details	=	\u5DE5\u65F6\u660E\u7EC6
+glad.office.workhours.register	=	\u5DE5\u65F6\u767B\u8BB0
+glad.office.workhours.total		=	\u5DE5\u65F6\u5408\u8BA1
+glad.office.models				=	\u6A21\u5757\u67E5\u8BE2
+glad.office.user				=	\u7528\u6237\u7BA1\u7406
+								=   \u6CA1\u627E\u5230\u6807\u9898
